Sp IV --> Cambios en Checksum y TimerTask Hay un fallo (crash) en NegocioChecksum